fix whitespace

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x:hidden;
+
   &::-webkit-scrollbar {
     width: 10px;
   }
